[package]
name = "programs"
version = "0.1.0"
authors = ["fukaoi <goodakira7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
remove_dir_all = "=0.5.0"
solana-program = "1.5.0"

[lib]
name = "programs"
crate-type = ["cdylib", "lib"]
